# mms-server

./: README.md
codes/: CMakeLists.txt  ChangeLog  mms_config.h.in  run_mms_service_for_local.sh  version_info  version_info.in
codes/conf/: controller.conf  inspector.conf  jh_mms_conf  jhtm_log_conf
codes/include/common/: climit.h  common.h  message.h
codes/include/message_helper/: async_server.h  message_sender.h  message_subscriber.h  publish_server.h
codes/modules/: FindLIBCZMQ.cmake  FindLIBEVENT2.cmake  FindLIBJSONGLIB.cmake  FindLIBXML2.cmake  FindMYSQL.cmake  FindSubversion.cmake
codes/reglic_helper/: cperegister  cpereglic  jhcpeck  tms_register.sh
codes/scripts/db_schema/: mms.sql  mms.sql.back  owl.sql
codes/src/: CMakeLists.txt
codes/src/common/: CMakeLists.txt  base64.c  base64.h  common.c  crypt.c  crypt.h  kafka_util.c  kafka_util.h  log.c  log.h  message.c
codes/src/common/sample/: CMakeLists.txt  encrypt_tool.c  encrypt_tool.h
codes/src/controller/: config.go  controller.go  mysql.go  rabbitmq.go
codes/src/data_statistics/: CMakeLists.txt  mms_daemon.py  mms_device_status_statistics.py
codes/src/event_service/: CMakeLists.txt  event_service_main.c  event_service_main.h
codes/src/github.com/influxdata/influxdb/client/v2/: client.go
codes/src/heartbeat_service/: CMakeLists.txt  heartbeat_service_main.c  heartbeat_service_main.h
codes/src/influxdb_metrics_service/: CMakeLists.txt  influxdb_metrics_service.c  influxdb_metrics_service.h
codes/src/inform_service/: CMakeLists.txt  inform_service_main.c  inform_service_main.h
codes/src/inspector/: compute.go  config.go  tsdb.go
codes/src/message_helper/: CMakeLists.txt  async_server.c  message_interface.c.nouse  message_interface.h.nouse  message_sender.c  message_subscriber.c  publish_server.c
codes/src/message_helper/test/: CMakeLists.txt  async_server_test.c  message_sender_test.c  publish_server_test.c
codes/src/minIni/: CMakeLists.txt
codes/src/owl/common/types/: execute.go  trigger.go
codes/src/publish_server_app/: config.go  log.go  main.go  messageHandler.go  publish_server.go
codes/src/register_service/: config.go  deviceinfo.go  errorcode.go  guid.go  main.go  messageHandler.go  mysql.go
codes/src/server_app/: CMakeLists.txt  resp_sender_service_func.c  resp_sender_service_func.h  server_app_main.c  server_app_main.h
codes/src/server_app/test/: CMakeLists.txt  dummy_server.c  server_test.c
codes/src/server_app/test/data/: cmd_task_result.json  inform.json  register.json  update_task_status.json
codes/src/task_management_service/: CMakeLists.txt  config_task_message_handler.c  config_task_message_handler.h  task_management_service_main.c  task_management_service_main.h
